--- a/projects/shared-library/package.json
+++ b/projects/shared-library/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@mezomon/shared-library-test",
-  "version": "0.0.4",
+  "version": "0.0.9",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
-    "@angular/core": "^17.3.0"
+    "@angular/core": "^17.3.0",
+    "@azure/msal-angular": "^3.0.13",
+    "@azure/msal-browser": "^3.10.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
