--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "@azure/msal-angular": "^3.0.13",
     "@azure/msal-browser": "^3.10.0",
+    "@ngrx/store": "^17.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
