--- a/projects/shared-library/package.json
+++ b/projects/shared-library/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@mezomon/shared-library-test",
-  "version": "0.0.9",
+  "version": "0.0.12",
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@azure/msal-angular": "^3.0.13",
-    "@azure/msal-browser": "^3.10.0"
+    "@azure/msal-browser": "^3.10.0",
+    "@ngrx/data": "~17.1.1",
+    "@ngrx/effects": "~17.1.1",
+    "@ngrx/entity": "~17.1.1",
+    "@ngrx/store": "~17.1.1",
+    "@ngrx/store-devtools": "~17.1.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
