--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@facundovega:registry="https://npm.pkg.github.com"
-//npm.pkg.github.com/:_authToken={{yourNPMToken}}
+@mzekiosmancik:registry="https://npm.pkg.github.com"
+//npm.pkg.github.com/:_authToken={{"npmToken"}}
